fix: Fixed workspace overflows not working and refined new HSL picker, b=no-bug, c=tabs, common, compact-mode, workspaces

--- a/src/zen/common/styles/zen-browser-ui.css
+++ b/src/zen/common/styles/zen-browser-ui.css
@@ -46,7 +46,10 @@
   pointer-events: none;
 
   isolation: isolate;
-  background: var(--zen-themed-toolbar-bg-transparent);
+
+  :root[zen-should-be-dark-mode] {
+    background: var(--zen-themed-toolbar-bg-transparent);
+  }
 
   &::after,
   &::before {
