--- a/src/zen/workspaces/zen-workspaces.css
+++ b/src/zen/workspaces/zen-workspaces.css
@@ -34,7 +34,8 @@
 
   & toolbarbutton {
     margin: 0;
-    width: 25px;
+    width: 28px;
+    height: 28px;
     display: flex;
     justify-content: center;
     padding: 0 !important;
